--- a/src/App.css
+++ b/src/App.css
@@ -18,15 +18,13 @@
 }
 
 #sidebar {
-  padding-top: 2.5rem;
-  width: 300px;
-  position: fixed;
-  top: 0;
+  position: sticky;
+  top: 4em;
   right: 0;
   height: 100vh;
   z-index: 999;
-  background: #7386d5;
-  color: #fff;
+  background: #f1f2f6;
+  color: black;
   transition: all 0.3s;
 }
 
@@ -48,7 +46,10 @@ a[data-toggle='collapse'] {
 
 @media (max-width: 768px) {
   #sidebar {
+    width: 300px;
+    background-color: #fafafa;
     margin-right: -300px;
+    position: fixed;
   }
   #sidebar.active {
     margin-right: 0;
@@ -62,16 +63,16 @@ a[data-toggle='collapse'] {
 
 body {
   font-family: 'Poppins', sans-serif;
-  background: #fafafa;
+  background: #f1f2f6;
 }
 
-p {
+/* p {
   font-family: 'Poppins', sans-serif;
   font-size: 1.1em;
   font-weight: 300;
   line-height: 1.7em;
   color: #999;
-}
+} */
 
 a,
 a:hover,
@@ -83,16 +84,16 @@ a:focus {
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #6d7fcc;
+  background: #f1f2f6;
 }
 
 #sidebar ul.components {
   padding: 20px 0;
-  border-bottom: 1px solid #47748b;
+  border-bottom: 1px solid #fde3ee;
 }
 
 #sidebar ul p {
-  color: #fff;
+  color: black;
   padding: 10px;
 }
 
