--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   right: 0;
   height: 100vh;
   z-index: 999;
-  background: #f1f2f6;
+  background-color: #f8f8f8;
   color: black;
   transition: all 0.3s;
 }
@@ -44,6 +44,10 @@ a[data-toggle='collapse'] {
   transform: translateY(-50%);
 }
 
+#nav-shadow {
+  box-shadow: 0 -1px 3px 0 rgb(0 0 0 / 16%), 0 1px 4px 0 rgb(0 0 0 / 12%);
+}
+
 @media (max-width: 768px) {
   #sidebar {
     width: 300px;
@@ -59,17 +63,17 @@ a[data-toggle='collapse'] {
 /*
     ADDITIONAL DEMO STYLE, NOT IMPORTANT TO MAKE THINGS WORK BUT TO MAKE IT A BIT NICER :)
 */
-@import 'https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700';
+/* @import 'https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700'; */
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background: #f1f2f6;
+  font-family: 'Tajawal', sans-serif;
+  background-color: #f8f8f8;
+  font-weight: 400; 
 }
 
 /* p {
   font-family: 'Poppins', sans-serif;
   font-size: 1.1em;
-  font-weight: 300;
   line-height: 1.7em;
   color: #999;
 } */
@@ -84,7 +88,7 @@ a:focus {
 
 #sidebar .sidebar-header {
   padding: 20px;
-  background: #f1f2f6;
+  background-color: #f8f8f8;
 }
 
 #sidebar ul.components {
@@ -120,6 +124,7 @@ ul ul a {
 
 #meme-container {
   max-width: 500px;
+  border-radius: 10px;
 }
 
 .rtl {
